fix: animations on mobile

--- a/app/entrypoint/app/global.css
+++ b/app/entrypoint/app/global.css
@@ -3,6 +3,10 @@ html, body {
   overflow-x: hidden;
 }
 
+* {
+  transition: all 0.05s ease-in-out;
+}
+
 html::-webkit-scrollbar {
   display: none;
 }
